[package]
name = "cruster"
version = "0.1.0"
authors = ["Josh Hill <josh.hill189@gmail.com>"]
edition = "2018"

[dependencies]
rlibc = "^1.0.0"
bootloader = "^0.9.0"
volatile = "^0.3.0"
spin = "^0.5.0"
x86_64 = "^0.11.0"
uart_16550 = "^0.2.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
